More code smells